security update to rails 3.2.11

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,9 +18,9 @@
    <div class="filler">
    </div>
    <div class="row homepage">      
-      <div class="span11" style="background:yello; margin-left:60px;">         
+      <div class="span11" style="margin-left:60px;">         
          <div class="row">
-            <div class="span5" style="background:pin; padding-right:40px; border-right:1px #eee solid">       
+            <div class="span5" style="padding-right:40px; border-right:1px #eee solid">       
                <h1> Travelers </h1><br/>
                <div style="text-align:left" >
                   <strong >A journey of a thousand miles must begin with a single step.
@@ -41,7 +41,7 @@
                   </div>
                   <%end%>               
             </div>
-            <div class="span5" style="padding-left:30px; background:gren">
+            <div class="span5" style="padding-left:30px">
                <h1> Locals </h1><br/>
                <div style="text-align:left">
                   <strong> Become a tiniHost to make some friends, earn some money, or practice a new language. </strong>
