--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
   <meta property="og:site_name" content="tiniHost" />
   <meta property="fb:admins" content="122610127" />
   <meta property="og:description" content="tiniHost connects travelers and locals for a more authentic, personal, and responsible travel experience."/>
+  <meta name="p:domain_verify" content="c07c4f58ec59fdf23f22031a51c6483e" />
   <%= yield(:head_tags) %>
 </head>
 <body>
