--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -7,7 +7,7 @@
      <div class="span2 edit_link">
          <%= link_to "Terms of service", terms_of_service_path %><br/>
          <%= link_to "Privacy information", privacy_path%> <br/>
-         <%= mail_to "team@tinihost.com", "Contact" %><br/>
+         <%= mail_to "team@tinihost.com", "Feedback" %><br/>
          <%= link_to "About", about_path %>   
      </div>
      <div class="span5">
