--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -18,11 +18,11 @@
 <div class="container">
    
 <div class="row">
-   <div class="span12 top-banner" id="weave" style="height:70px">
+   <div class="span12 top-banner" id="weave-small" style="height:70px">
       <div class="row">
          <div class="span5 offset1">
             <br/>
-            <strong id="white">You can narrow your search by choosing the type of host you are looking for.</strong>
+            <strong id="white">You can narrow your search by choosing the type of host you are looking for below.</strong>
          </div>   
          <div class="span4 offset1">
             <br/>
