--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -18,7 +18,7 @@
 <div class="container">
    
 <div class="row">
-   <div class="span12 top-banner" id="weave" style="height:70px">
+   <div class="span12 top-banner" id="weave-small" style="height:70px">
       <div class="row">
          <div class="span5 offset1">
             <br/>
