--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -152,7 +152,7 @@ body {
 	   background-image:url('paris.jpg'); 	
    }
 	&#weave-small{
-	   background-image:url('paristop.jpg'); 	
+	   background-image:url('parisstop.jpg'); 	
    }
 	padding:10px 0px 10px 10px; 
 	border-radius:5px; 
