added admin interface

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -913,3 +913,12 @@ ul.ui-autocomplete {
 #fb-login:hover{
 	opacity:0;
 }
+
+.admin-table{
+	td{
+		padding:5px 15px;
+		}
+	tr{
+		border:1px solid #aaa;		
+	}
+}
