--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -41,6 +41,23 @@
                   </div>
                   <%end%>               
             </div>
+<% if params[:landingflight] == "true" %>
+<div class="span5" style="padding-left:30px">
+   <h1> Locals </h1><br/>
+   <div style="text-align:left">
+      <strong> Shop, dine, show a traveler around in exchange for payment, language practice, or the simple joy of making a new friend. </strong>
+   <br/><br>
+   </div>
+   <%= image_tag "actgroup.png", alt: "adventures collage"%><br/> 
+   <br/>
+   <% if signed_in? %>
+      <%= button_to "Become Host!", becomehost_path, id:"pink-button" unless current_user.is_host? %>
+   <% else %>
+      <%= button_to "Join tiniHost!", signin_path, id: "pink-button" %>
+  <% end %>                     
+</div>
+<% else %>
+  
             <div class="span5" style="padding-left:30px">
                <h1> Locals </h1><br/>
                <div style="text-align:left">
@@ -55,6 +72,7 @@
                   <%= button_to "Join tiniHost!", signin_path, id: "pink-button" %>
               <% end %>                     
             </div>
+<% end %>
          </div>
       </div>
    </div>
