--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -44,7 +44,7 @@
 <div class="span5" style="padding-left:30px">
    <h1> Locals </h1><br/>
    <div style="text-align:left">
-      <strong> Shop, dine, show a traveler around in exchange for payment, language practice, or the simple joy of making a new friend. </strong>
+      <strong> Shop, dine, show travelers around in exchange for payment, language practice, or the simple joy of making a new friend. </strong>
    <br/><br>
    </div>
    <%= image_tag "actgroup.png", alt: "adventures collage"%><br/> 
@@ -58,9 +58,10 @@
          </div>
       </div>
    </div>
+   <br/>
    <div class="row" style="text-align:center">    
-      <%= link_to image_tag("facebook.png", alt: "Tinihost facebook page", size: "100x100"), "https://www.facebook.com/tiniHost" %>
-      <%= link_to image_tag("twitter.png", alt: "Tinihost twitter page", size: "100x100"), "https://twitter.com/tinihost" %>           
+      <%= link_to image_tag("facebook.png", alt: "Tinihost facebook page", size: "50x50"), "https://www.facebook.com/tiniHost" %>
+      <%= link_to image_tag("twitter.png", alt: "Tinihost twitter page", size: "50x50"), "https://twitter.com/tinihost" %>           
    </div>                 
 </div>
 <br/>
