--- a/app/views/shared/_how_it_works.html.erb
+++ b/app/views/shared/_how_it_works.html.erb
@@ -1,6 +1,9 @@
     <div class="row">
        <h1>How it works</h1><br/>
-          <h3>tiniHost connects travelers and locals for a more authentic, personal, and responsible travel experience.  </h3>
+       <div class="span9" style="margin-left:0px">
+          <h3>tiniHost connects travelers with the perfect meal companion, the savviest shopping buddy, or just a know-it-all local who can provide a fun and authentic experience in a new city. </h3>
+          </div>
+          
     </div>
     <div class="filler"></div>
     <div class="row">
